--- a/config.yml
+++ b/config.yml
@@ -1,16 +1,15 @@
 ---
 listen:
-  host: localhost
   port: 55757
 mysql:
   db: crh
-  host: localhost
+  host: mysql
   port: 3306
   user: crh
   pass: VqumC5PRCpYLtRb2FV5n
 redis:
-  host: localhost
+  host: redis
   port: 6379
   db: 7
-  pass: 3D6kiP36dYTK9X2a
-logfile: crh.log
+  pass: pFG64SBbhGB56K8Cv5eZbrdQ
+logfile: logs/crh.log
